  * When more than 4 players are permitted, the per-player marker limit is reduced to 2, regardless of whether more than 4 players are actually in the game.  Due to savegame limitations, at most 16 markers can be in use.  The 0.60.x limit of 4 per-player is retained when there are at most 4 players permitted in the game.

What's new in 0.60
------------------
* Merged code bases and massive code refactorization. [Massive thanks to kp]
* Screenshots are now saved as PNG by default.  This reduces size, sometimes very substantially, and simplifies posting screenshots online.
* Screenshot filenames are now date-stamped.
* Homing projectiles now behave like in the original game running at 30 FPS! [Thanks to Drakona, Lothar, roncli, A Future Pilot, Ryusei117 and more]
* Fixed FPS fluctuations with VSync. [Thanks to derhass]
* Flashing effects properly scale to ingame brightness setting.
* In addition to quicksave, there is now a quickload key!
* Original base input sensitivity for all devices and mouse overrun option for mouse. [Thanks to the Retro team]
* Improved collision detection, fixing player damage being way too low in some ocassions. [Thanks to Drakona]
* Reworked OPTIONS menu.
* New texture filtering options! [Thanks to beware]
* Optional timers displaying countdowns for cloak and invulnerability.
* New tracker for Multiplayer games.
* Players can now drop the Quad Laser powerup and Laser powerups 2-4.  Players cannot drop Super Laser powerups at all.
* Players can now choose whether respawning is triggered by any input or only by pressing a weapon firing input.  This allows players using push-to-talk to speak without respawning, and allows all players to iconify the game while dead.